--- a/main.html
+++ b/main.html
@@ -3,10 +3,10 @@
 <link rel="stylesheet" href="style.css">
 <body>
 
+<div class="calendar-container">
 <table  class = "main-table">
 <thead>
     <tr>
-      
         <th>Sun</th>
         <th>Mon</th>
         <th>Tue</th>
@@ -75,6 +75,11 @@
     </tr>
 </tbody>
 </table>
+</div>
+<div class="buttons">
+<button class="btn">Previous</button>
+<button class="btn">Next</button>
+</div>
 
 </body>
 </html>
