--- a/main.html
+++ b/main.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="style.css">
+
 <body>
 
 <div class="calendar-container">
-    <h3 class="card-header" id="monthAndYear">TEST</h3>
+    <h3 class="card-header" id="monthAndYear"></h3>
 <table  class = "main-table">
         <thead>
             <tr>
@@ -14,18 +15,41 @@
                 <th>Wed</th>
                 <th>Thu</th>
                 <th>Fri</th>
-                <th>sat</th>
+                <th>Sat</th>
             </tr>
         </thead>
   
-    <tbody class="calendar-body">
+    <tbody id="calendar-body">
     </tbody>
 </table>
+<form class="form-inline">
+    <label class="lead mr-2 ml-2" for="month">Jump To: </label>
+    <select class="form-control col-sm-4" name="month" id="month" onchange="change()">
+        <option value=0>Jan</option>
+        <option value=1>Feb</option>
+        <option value=2>Mar</option>
+        <option value=3>Apr</option>
+        <option value=4>May</option>
+        <option value=5>Jun</option>
+        <option value=6>Jul</option>
+        <option value=7>Aug</option>
+        <option value=8>Sep</option>
+        <option value=9>Oct</option>
+        <option value=10>Nov</option>
+        <option value=11>Dec</option>
+    </select>
+
+
+    <label for="year"></label><select class="form-control col-sm-4" name="year" id="year" onchange="change()">
+    
+</select></form>
 </div>
 <div class="buttons">
-<button class="btn">Previous</button>
-<button class="btn">Next</button>
+<button class="btn" onclick="previous()">Previous</button>
+<button class="btn" onclick="next()">Next</button>
 </div>
 
+<script src="mainscript.js"></script>
 </body>
 </html>
+
